# latex-resume-creator

./: .env.sample  .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
.github/workflows/: deploy.yaml
src/resume_creator/: main.py
src/resume_creator/data/: resume.json
src/resume_creator/templates/: resume.tex
